--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
-body {
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+* {
     margin: 0;
     padding: 0;
 }
 
 h1 {
-    max-width: 320px;
+    max-width: 350px;
     margin: 30px auto;
     padding: 15px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #1E6AE1;
     color: #FFF;
 }
@@ -28,7 +34,7 @@ h1 {
 }
 
 .calc-head #result {
-    width: 335px;
+    width: 345px;
     height: 100px;
     font-size: 2rem;
     font-weight: bold;
@@ -61,7 +67,7 @@ h1 {
 
 @media (max-width: 600px) {
     body {
-        background-color: rgb(170, 210, 230);
+        background-color: #AAD2E6;
         padding: 1%;
     }
 
